# counterfactual-explanations-by-substitution

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
configs/: bilinear.yaml  retrain.yaml  roar_eval.yaml  shapley.yaml
notebooks/: data_exploration.ipynb
scripts/: export_experiments.py  import_experiments.py  move_runs.py  run_bilinear.py  run_bilinear_for_many.sh  run_retrain_for_many.sh  run_roar_eval.py  run_shap_for_many_inds.sh  run_shapley.py
src/: bilinear_model.py  clip_inferance.py  constants.py  data_loading.py  keypoints.py  mlflow.py  model_inference.py  plots.py  shapely.py  shapley.py  substitution.py  utils.py  visualize.py
src/data/: __init__.py  loader.py  sampler.py
src/fid/: evaluator.py  generator.py
src/inpainter/: diffusion.py  fp16_util.py  guidance.py  i2sb.py  network.py  nn.py  transforms.py  unet.py
src/inpainter/guidance/: __init__.py  classifier.py  guidance.py  utils.py
src/interface/: __init__.py  clip.py  vit.py
src/retraining/: retrain.py
src/shapley/: __init__.py  bilinear_model.py  calculator.py
src/substitution/: __init__.py  core.py  keypoints.py
