[project]
name = "counterfactual-explanations-by-substitution"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-decouple>=3.8",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "pydantic>=2.13.3",
    "python-dotenv>=1.1.1",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.6.2",
    "hydra-core>=1.3.2",
    "scikit-image>=0.26.0",
    "captum[pytorch]>=0.9.0",
    "wandb>=0.26.1",
    "tensorboard>=2.20.0",
    "lightning>=2.6.1",
    "blobfile>=3.2.0",
    "datasets>=4.8.5",
    "loguru>=0.7.3",
    "pyqt6>=6.11.0",
    "opencv-contrib-python>=4.13.0.92",
    "mediapipe>=0.10.35",
    "torch-ema>=0.3",
    "clean-fid>=0.1.35",
    "clip",
    "mlflow>=3.13.0",
    "lpips>=0.1.4",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
    "ty>=0.0.34",
]

[tool.uv.sources]
clip = { git = "https://github.com/openai/CLIP.git" }
